--- a/styles/all.css
+++ b/styles/all.css
@@ -1,88 +1,97 @@
+*{
+font-family: Arial, Helvetica, sans-serif;
+padding: 0;
+margin: 0;
+letter-spacing: 1px;
+}
 body{
   width: 100%;
   height: 100%;
   margin: 0%;
   padding: 0%;
-  font-family: sans-serif;
-  background-image: url('../images/drip.png');
   background-position: top left;
   background-repeat: repeat-x;
 }
 .bold{
   font-weight: bold;
+color: #C73866;
+
+}
+.bold2{
+  font-weight: bold;
+color: #C73866;
+font-size: 20px;
+
 }
 
 #name{
 font-size: 80px;
-
-background-color: #004d4d;
-
 }
 
-#logo{
-  width: 15%;
-  height: 54px;
-  position: absolute;
-}
 
 
 #navbar li{
-  font-size: 120%;
-  width: 10%;
+width: 1%;
   display: inline-block;
   font-weight: bold;
-  margin-left: 10%;
+  margin-right: 5%;
   height: 38px;;
-  text-align: center;
-  font-size: 100%;
-  margin-top: 0;
+  margin-top: 13px;
+  float: right;
+}
 
+#navbar:hover{
+  background-color: rgba(234,166,123,1);
+}
+
+#navbar a{
+  font-family: Arial;
+  text-decoration: none;
+  font-size: 12px;
+  color: black;
+letter-spacing: 3px;
 
 }
 
 
+
 #navbar #uniform{
-  background-color: #008080;
-  padding-top: 20px;
+  background-color: rgba(234,166,123,1);
+  padding-top: 5px;
   padding-bottom: 10px;
   padding-left: 50%;
   padding-right: 50%;
   text-align: center;
   font-weight: bolder;
   color: white;
+
 }
+
 
 #navbar #other{
 
-  background-color:#00b3b3;
+  /* background-color:#00b3b3;
   padding-top: 20px;
   padding-bottom: 10px;
   padding-left: 50%;
   padding-right: 50%;
   text-align: center;
-  color: white;
+  color: white; */
 }
 
 
 
-a{
-  text-decoration: none;
-  font-size: 20px;
-}
 
 
 #navbar{
-  box-sizing: border-box;
   width: 100%;
-  padding-left: 40%;
-  height: 54px;
+  height: 55px;
+background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%);
+
+
 
 }
 
-header img,header nav {
-  display:inline-block;
-  vertical-align:middle;
-}
 header{
   width: 100%;
   height: 45px;
@@ -90,19 +99,18 @@ header{
 }
 
 header, #navbar, .logo{
-  background-color:  #00b3b3;
+/* background-color:   #eaa67b; */
+
 }
 
-.welcome,.games, .art, .music{
-  box-sizing: border-box;
+.welcome,.media{
   background-color: white;
-  width: 84%;
+  width: 80%;
   height: 100%;
-  float:left;
   text-align: center;
-  background-color: #00b3b3;
-
+  margin-left: 10%;
 }
+
 
 
 p{
@@ -110,7 +118,7 @@ p{
   color: white;
 }
 .welcome {
-  color :white;
+  color :black;
 }
 
 .music{
@@ -120,54 +128,151 @@ p{
 
 
 
-.music h3{
-background-color: #008080;
-}
-
-.art img, .games img{
+.art img{
   width: 100%;
   height: 900px;
 
 }
-.music img{
-  width: 100%;
-  height: 1200px;
+
+.images{
+background-color:   #eaa67b;
+background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%);
+
+
+width: 100%;
+height: 600px;
+}
+
+.images #image1{
+  width: 60%;
+  margin-left: 20%;
+  height: 100%;
+mix-blend-mode:hard-light
+}
+
+#image2,#image3 {
+  width: 40%;
+  height: 550px;
+
 }
 
 
-.rightimage, .leftimage{
-  width: 8%;
-  background-color: white;
-  height: 900px;;
+#image3{
+margin-left: 0;
+margin-top: 10%;
 
-  background-image:url('../images/drip.png');
-  background-position: top left;
-  background-repeat: no-repeat;
-}
-.leftimage{
-  float: left;
 }
 
-.rightimage{
-  float: right;
+#image1, #image2, #image3, .caption{
+float: left;
 }
 
 
-#art, #music, #games{
-  width: 20%;
-  height: 100px;
-  display: inline-block;
-  padding: 5%;
-  position: relative;
-  background-color: #008080;
+
+.description, .description2{
+float:left;
+margin-left: 2%;
+height: 550px;
+width: 58%;
+letter-spacing: 5px;
+font-family: Arial;
+line-height: 30px;
 }
-#art img, #music img, #games img{
-  width: 100%;
-  height: auto;
+
+.description2{
+margin-left: 0%;
+margin-right: 2%;
+margin-top: 10%;
 }
+
+
+.box1, .box2{
+height: auto;
+width: 100%;
+}
+
+
+
+.caption{
+position: absolute;
+letter-spacing: 5px;
+font-family: Arial;
+color: white;
+margin-left: 1%;
+margin-top: 5%;
+width: 45%;
+height: auto;
+line-height: 50px;
+
+}
+
+.top{
+font-size: 35px;
+margin-bottom: 5%;
+color: #C73866;
+
+}
+
+
+
+
+.head{
+color: #C73866;
+font-size: 50px;
+width: 90%;
+margin-left: 5%;
+font-weight: bolder;
+line-height: 60px;
+
+}
+
+
+
+.ideas{
+  width: 30%;
+  /* background-color: #008080; */
+height: 100%;
+padding: 2%;
+margin-left: 35%;
+background-color:  rgba(251,238,230,1) ;
+float: left;
+margin-top: 5%;
+
+}
+.ideas div{
+margin-top: 2%;
+}
+.ideas button{
+  background-color: ghostwhite;
+
+  padding: 2%;
+  width: 30%;
+  font-size: 14px;
+  border-radius: 4px;
+  color: black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+
+
+
+.secondhead{
+color: black;
+font-weight: bold;
+font-size: 25px;
+width: 90%;
+margin-left: 5%;
+}
+
+
+.bodytext{
+font-size: 15px;
+width: 90%;
+margin-left: 5%;
+}
+
 
 .pocket{
-  background-color: #004d4d;
   position: absolute;
   width: 80%;
   height: 180px;
@@ -188,21 +293,7 @@ background-color: #008080;
   background-color: white;
 }
 
-.ideas{
-  margin-top: 15%;
-  width: 50%;
-  background-color: #008080;
-  margin-bottom: 5%;
-  margin-left: 25%;
-  padding-top: 3%;
-  padding-bottom: 2%;
-}
 
-
-#music:hover .overlay , #games:hover .overlay, #art:hover .overlay{
-  transform: scale(1)
-
-}
 
 .text {
   font-weight: bold;
@@ -217,84 +308,71 @@ background-color: #008080;
   text-align: center;
 }
 
-.welcome p, .games p, .music p, .art p{
-  margin-left: 5%;
-  margin-right: 5%;
-}
-.music h3, .music h2{
-  font-size: 30px;
-  color:#003333;
-}
+.content{
+margin-top: 6%;
+margin-left: 10%;
+margin-right: 10%;
+width: 80%;
+height: 1000px;
+line-height: 25px;
 
+}
+.content p, .content li{
+color: black;
+font-size: 15px;
+/* letter-spacing: 2px; */
 
-.title-centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 120px;
 }
 
 
-.counter{
-margin-bottom: 30px;
+.counter {
+width: 100%;
+margin-top: 50px;
+margin-bottom: 2%;
+display: flex;
+flex-direction: row;
 }
 
-.counter .cont1{
-  width: 40%;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  font-size: 20px;
-  color: white;
+.cont1{
 
-}
-.counter .cont2{
-  width: 20%;
-  height: 150px;
-  margin-right: 10%;
-  bottom: 10%;
-  font-size: 20px;
-  color: white;
-
+width: 35%;
+height: auto;
+margin-right: 2%;
 }
 
 .cont2{
-  padding: 10px;
-  background-color:  #008080;
-  padding-right: 200px;
+width: 30%;
+height:auto;
+}
+.cont2 img{
+width: 300px;
+height:auto;
 }
 
-.cont2 img{
-  width: 100%;
-  height: 100%;
-  margin-bottom: 0px;
+.cont2, .cont1{
+float: left;
 }
-.cont1,.cont2{
-  display: inline-block;
-  font-size: 20px;
-  font-weight: normal;
-  color: white;
-}
-.cont1 h4, .cont2 h4{
-  color: white;
-  font-style: italic;
-}
-.counter div:hover {
-  background-color:  #008080;
-}
+
+
+
 .art-cont{
-width: 80%;
-height: 900px;
-margin-left: 10%;
-margin-right: 10%;
-border: ridge 10px #cc9966;
+width: 100%;
+margin-top: 2%;
+margin-bottom: 2%;
+margin-right: 2%;
+display: flex;
+flex-direction: row;
 }
 .art-cont img{
-width: 100%;
-height: 100%;
+width: 47%;
+height: 500px;
+margin-right:2%;
 }
+
+.art-cont p{
+width: 50%;
+}
+
 
 
 .hiddenError{
@@ -313,17 +391,16 @@ height: 100%;
 
 .submit{
   background-color: white;
-  width: 84%;
-  height: 900px;
-  float:left;
+  width: 80%;
+  margin-left: 10%;
+  height: 200px;
   text-align: center;
-  background-color:#00b3b3;
-  background-image: url('../images/flower.jpeg');
 }
+
 .submit p{
 width: 1000px;
-font-size: 50px;
-color: white;
+font-size: 25px;
+color: black;
 margin-top: 20%;
 margin-left: 100px;
 margin-right: 100px;
@@ -336,4 +413,23 @@ font-weight: bold;
 
 ::-ms-input-placeholder{
 font-family: sans-serif;
+}
+
+
+footer{
+background-color: red;
+margin-top: 10%;
+float: left;
+width: 100%;
+height: 100px;
+background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%);
+
+}
+footer p{
+font-size: 12px;
+}
+.first_info{
+width: 20%;
+margin-top:1%;
+margin-left: 1%;
 }
