--- a/styles/all.css
+++ b/styles/all.css
@@ -4,22 +4,34 @@ padding: 0;
 margin: 0;
 letter-spacing: 1px;
 }
+
+hr{
+margin-top: 50px;
+
+}
 body{
   width: 100%;
   height: 100%;
   margin: 0%;
   padding: 0%;
   background-position: top left;
-  background-repeat: repeat-x;
+  background-repeat: repeat-x;+
 }
 .bold{
   font-weight: bold;
 color: #C73866;
+color:   #b2010a
+
+;
+
 
 }
 .bold2{
   font-weight: bold;
 color: #C73866;
+color:  #b2010a
+
+;
 font-size: 20px;
 
 }
@@ -41,7 +53,7 @@ width: 1%;
 }
 
 #navbar:hover{
-  background-color: rgba(234,166,123,1);
+  /* background-color: rgba(234,166,123,1); */
 }
 
 #navbar a{
@@ -56,7 +68,7 @@ letter-spacing: 3px;
 
 
 #navbar #uniform{
-  background-color: rgba(234,166,123,1);
+  /* background-color: rgba(234,166,123,1); */
   padding-top: 5px;
   padding-bottom: 10px;
   padding-left: 50%;
@@ -64,6 +76,11 @@ letter-spacing: 3px;
   text-align: center;
   font-weight: bolder;
   color: white;
+color: #C73866;
+color:   #b2010a
+
+;
+
 
 }
 
@@ -86,7 +103,7 @@ letter-spacing: 3px;
 #navbar{
   width: 100%;
   height: 55px;
-background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%);
+/* background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%); */
 
 
 
@@ -95,7 +112,7 @@ background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 6
 header{
   width: 100%;
   height: 45px;
-  background-color:  #e6f3ff;
+  /* background-color:  #e6f3ff; */
 }
 
 header, #navbar, .logo{
@@ -135,17 +152,17 @@ p{
 }
 
 .images{
-background-color:   #eaa67b;
-background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%);
+/* background-color:   #eaa67b; */
+/* background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%); */
 
 
 width: 100%;
-height: 600px;
+height: 850px;
 }
 
 .images #image1{
-  width: 60%;
-  margin-left: 20%;
+  width: 100%;
+  /* margin-left: 15%; */
   height: 100%;
 mix-blend-mode:hard-light
 }
@@ -160,6 +177,7 @@ mix-blend-mode:hard-light
 #image3{
 margin-left: 0;
 margin-top: 10%;
+height:600px;
 
 }
 
@@ -198,7 +216,7 @@ position: absolute;
 letter-spacing: 5px;
 font-family: Arial;
 color: white;
-margin-left: 1%;
+margin-left: 10%;
 margin-top: 5%;
 width: 45%;
 height: auto;
@@ -210,21 +228,41 @@ line-height: 50px;
 font-size: 35px;
 margin-bottom: 5%;
 color: #C73866;
+color:   #b2010a
 
+;
 }
-
-
-
 
 .head{
 color: #C73866;
-font-size: 50px;
+font-size: 90px;
 width: 90%;
 margin-left: 5%;
 font-weight: bolder;
-line-height: 60px;
-
+line-height: 90px;
+color:   #fe676e
+;
 }
+
+.secondhead{
+color: black;
+font-weight: bold;
+font-size: 35px;
+width: 90%;
+margin-left: 1%;
+}
+
+
+.bodytext{
+font-size: 15px;
+width: 90%;
+margin-left: 5%;
+font-weight: bolder;
+color: white;
+}
+
+
+
 
 
 
@@ -234,7 +272,7 @@ line-height: 60px;
 height: 100%;
 padding: 2%;
 margin-left: 35%;
-background-color:  rgba(251,238,230,1) ;
+/* background-color:  rgba(251,238,230,1) ; */
 float: left;
 margin-top: 5%;
 
@@ -255,21 +293,6 @@ margin-top: 2%;
 
 
 
-
-.secondhead{
-color: black;
-font-weight: bold;
-font-size: 25px;
-width: 90%;
-margin-left: 5%;
-}
-
-
-.bodytext{
-font-size: 15px;
-width: 90%;
-margin-left: 5%;
-}
 
 
 .pocket{
@@ -358,10 +381,11 @@ float: left;
 .art-cont{
 width: 100%;
 margin-top: 2%;
-margin-bottom: 2%;
+margin-bottom: 5%;
 margin-right: 2%;
 display: flex;
 flex-direction: row;
+line-height: 25px;
 }
 .art-cont img{
 width: 47%;
@@ -417,16 +441,18 @@ font-family: sans-serif;
 
 
 footer{
-background-color: red;
-margin-top: 10%;
+margin-top: 2%;
 float: left;
 width: 100%;
 height: 100px;
-background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%);
+/* background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%); */
+  background-color: white;
 
 }
 footer p{
 font-size: 12px;
+color: black;
+
 }
 .first_info{
 width: 20%;
