--- a/styles/all.css
+++ b/styles/all.css
@@ -15,7 +15,7 @@ body{
   margin: 0%;
   padding: 0%;
   background-position: top left;
-  background-repeat: repeat-x;+
+  background-repeat: repeat-x;
 }
 .bold{
   font-weight: bold;
