--- a/styles/all.css
+++ b/styles/all.css
@@ -1,45 +1,72 @@
-@media only screen and (min-width: 750px) {
+
+
+a, p{
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+}
+
+h1, h2{
+  font-family: 'Times New Roman', Times, serif;
+
+}
+h3,h4{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
+
+
+h2{
+  color:   #b2010a
+}
+
+html {
+  scroll-behavior: smooth;
+ }
+
+
+
 
 *{
-font-family: Arial, Helvetica, sans-serif;
 padding: 0;
 margin: 0;
 letter-spacing: 1px;
 }
 
+
 hr{
 margin-top: 50px;
 
 }
+
 body{
   width: 100%;
   height: 100%;
   margin: 0%;
   padding: 0%;
-  background-position: top left;
-  background-repeat: repeat-x;
+
 }
+
 .bold{
-  font-weight: bold;
-color: #C73866;
+font-weight: bold;
+} 
+.bold_color{
 color:   #b2010a
-
-;
-
-
 }
+
 .bold2{
   font-weight: bold;
-color: #C73866;
 color:  #b2010a
-
-;
-font-size: 20px;
 
 }
 
-#name{
-font-size: 80px;
+
+header{
+  width: 100%;
+  height: 100%;
+  box-shadow: 1px 1px  #d9d9d9;
+
+
 }
 
 
@@ -47,80 +74,65 @@ font-size: 80px;
 #navbar li{
   display: inline-block;
   font-weight: bold;
-  margin-right: 5%;
-  height: 38px;;
-  margin-top: 10px;
-  float: right;
 }
-
 
 #navbar a{
   font-family: Arial;
   text-decoration: none;
-  font-size: 12px;
-  color: black;
-  letter-spacing: 3px;
 
 }
-
-
-
-#navbar #uniform{
-  /* background-color: rgba(234,166,123,1); */
-  /* padding-top: 5px;
-  padding-bottom: 10px;
-  padding-left: 50%;
-  padding-right: 50%; */
-  text-align: center;
-  font-weight: bolder;
-  color: white;
-color: #C73866;
-color:   #b2010a
-
-;
-
-
-}
-
-
-
 
 #navbar{
-  width: 100%;
   height: 55px;
-/* background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%); */
-
-
-
 }
 
-header{
-  width: 100%;
-  height: 45px;
-  /* background-color:  #e6f3ff; */
-  box-shadow: 1px 1px  #d9d9d9;
 
+.selected{
+color: #b2010a;
 }
 
-header, #navbar, .logo{
-/* background-color:   #eaa67b; */
-
-}
-
-.welcome,.media{
-  background-color: white;
-  width: 80%;
-  height: 100%;
-  text-align: center;
-  margin-left: 10%;
+.notSelected{
+  color:black;
 }
 
 
 
-p{
-  font-size: 20px;
-  color: white;
+#caption{
+position: absolute;
+
+font-family: Arial;
+width: 80%;
+height: auto;
+top: 30%;
+
 }
+
+
+#caption_h1{
+font-weight: bolder;
+color:   #fa4049;
+}
+
+#caption_h3{
+color: black;
+margin-top: 2%;
+margin-bottom: 5%;
+}
+
+
+
+#caption_button{
+padding: 2%;
+
+background-color:#b2010a ;
+color: white;
+}
+
+#caption_button:hover{
+background-color:white ;
+color: black;
+}
+
 .welcome {
   color :black;
 }
@@ -138,146 +150,63 @@ p{
 
 }
 
-.images{
-/* background-color:   #eaa67b; */
-/* background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%); */
 
 
-width: 100%;
-/* height: 950px; */
-}
 
-.images #image1{
+
+
+#header-image{
   width: 100%;
-  /* margin-left: 15%; */
   height: 100%;
-mix-blend-mode:hard-light
-}
-
-#image2,#image3 {
-  width: 40%;
-  height: 550px;
+  mix-blend-mode:hard-light;
 
 }
 
-
-#image3{
-margin-left: 0;
-margin-top: 10%;
-height:600px;
-
+#blog-image{
+  width:100%;
 }
 
 
-#image1, #image2, #image3, .caption{
-}
-
-
-.description, .description2{
-float:left;
-margin-left: 2%;
-width: 58%;
-letter-spacing: 5px;
-font-family: Arial;
-line-height: 30px;
-}
-
-.description2{
-margin-left: 0%;
-margin-right: 2%;
-margin-top: 10%;
-}
-
-
-.box1, .box2{
-height: auto;
-width: 100%;
+.description {
+  width: 100%;
+  display: inline-block;
+  vertical-align: top;
+  line-height: 25px;
 }
 
 
 
-.caption{
-position: absolute;
-letter-spacing: 5px;
-font-family: Arial;
-color: white;
-margin-left: 10%;
-margin-top: 5%;
-width: 45%;
-height: auto;
-line-height: 50px;
-bottom: 10%;
-right: 50%;
+.comments{
 
-}
-
-.top{
-font-size: 35px;
-margin-bottom: 5%;
-color: #C73866;
-color:   #b2010a
-
-;
-}
-
-.head{
-color: #C73866;
-font-size: 90px;
 width: 90%;
 margin-left: 5%;
-font-weight: bolder;
-line-height: 90px;
-color:   #fe676e
-;
-}
-
-.secondhead{
-color: black;
-font-weight: bold;
-font-size: 35px;
-width: 90%;
-margin-left: 1%;
-}
-
-
-.bodytext{
-font-size: 15px;
-width: 90%;
-margin-left: 5%;
-font-weight: bolder;
-color: white;
-}
-
-
-
-
-
-
-.ideas{
-  width: 30%;
-  /* background-color: #008080; */
 height: 100%;
-padding: 2%;
-margin-left: 35%;
+padding-bottom: 5%;
 background-color:  rgba(251,238,230,1) ;
-/* float: left; */
-margin-top: 5%;
+padding-top:5%;padding-bottom:5%;
+text-align: center;
 
 
 }
-.ideas div{
+.comments div{
 margin-top: 2%;
 }
-.ideas button{
-  background-color: ghostwhite;
+#comment_button{
+background-color:#b2010a ;
 
   padding: 2%;
   width: 30%;
-  font-size: 14px;
-  border-radius: 4px;
-  color: black;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  color: white;
+  border: none;
 }
+
+#comment_button:hover{
+  background-color: ghostwhite;
+  color:black;
+  cursor: pointer;
+
+}
+
 
 
 
@@ -285,7 +214,7 @@ margin-top: 2%;
 
 .pocket{
   position: absolute;
-  width: 80%;
+  width: 100%;
   height: 180px;
   top: 10%;
   left: 10%;
@@ -293,24 +222,13 @@ margin-top: 2%;
   opacity: .2;
 }
 
-.overlay{
-  position: absolute;
-  width:67%;
-  height:100px;
-  background-color: white;
-  overflow: hidden;
-  -webkit-transform:scale(0);
-  transition: .3s ease;
-  background-color: white;
-}
+
 
 
 
 .text {
   font-weight: bold;
-  font-size: 40px;
   color: black;
-  font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -321,17 +239,12 @@ margin-top: 2%;
 
 .content{
 margin-top: 6%;
-margin-left: 10%;
-margin-right: 10%;
-width: 80%;
-line-height: 25px;
+margin-left: 5%;
+width: 90%;
 
 }
 .content p, .content li{
 color: black;
-font-size: 15px;
-/* letter-spacing: 2px; */
-
 }
 
 
@@ -341,6 +254,16 @@ margin-top: 50px;
 margin-bottom: 2%;
 display: flex;
 flex-direction: row;
+}
+
+textarea{
+  width: 90%;
+  height:100px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+input{
+   width: 50%;
+  height:20px;
 }
 
 .cont1{
@@ -373,7 +296,7 @@ margin-bottom: 5%;
 margin-right: 2%;
 display: flex;
 flex-direction: row;
-line-height: 25px;
+
 }
 .art-cont img{
 width: 47%;
@@ -397,55 +320,110 @@ width: 50%;
 
 .message{
   color: white;
-  font-size: 30px;
+
   text-align:center;
 }
 
-.submit{
-  background-color: white;
-  width: 80%;
-  margin-left: 10%;
-  height: 200px;
-  text-align: center;
+
+
+
+
+#navbar{
+  display: none;
 }
 
-.submit p{
-width: 1000px;
-font-size: 25px;
-color: black;
-margin-top: 20%;
-margin-left: 100px;
-margin-right: 100px;
+
+
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+
 }
 
-::placeholder{
-font-family: sans-serif;
-font-weight: bold;
+#drop-icon{
+  width:5%;
 }
 
-::-ms-input-placeholder{
-font-family: sans-serif;
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
 }
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 footer{
-margin-top: 2%;
-float: left;
+margin-top: 5;
 width: 100%;
 height: 100px;
 /* background: linear-gradient(90deg, rgba(234,166,123,1) 0%, rgba(243,205,181,1) 67%, rgba(251,238,230,1) 100%); */
   background-color: white;
+  border-top: 1px black solid;
 
 }
+
 footer p{
-font-size: 12px;
-color: black;
-
-}
-.first_info{
-width: 20%;
+width: 100%;
 margin-top:1%;
-margin-left: 1%;
-}
 
 }
+
+
+
