--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,34 +1,5 @@
 @media  (min-width: 1000px) {
 
-
-
-a, p{
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-}
-
-h1, h2{
-  font-family: 'Times New Roman', Times, serif;
-
-}
-h3,h4{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-}
-
-
-
-h2{
-  color:   #b2010a
-}
-
-html {
-  scroll-behavior: smooth;
- }
-
-
-
-
 *{
 padding: 0;
 margin: 0;
@@ -41,7 +12,7 @@ h1{
   font-size: 5rem;
 }
 
-p{
+p,li{
   font-size: 1rem;
 }
 
@@ -52,11 +23,11 @@ a{
 }
 
 h2{
-  font-size: 50px;
+  font-size: 3rem;
   
 }
 h3{
-    font-size: 3rem;
+    font-size: 2rem;
 
 }
 h4{
@@ -85,7 +56,7 @@ margin-top: 50px;
   font-weight: bold;
   margin-right: 5%;
   height: 38px;;
-  margin-top: 10px;
+  margin-top: 18px;
 }
 
 
@@ -98,19 +69,31 @@ margin-top: 50px;
 
 }
 
-
+.horizontal-spacer{
+  width: 5%;
+  height: 100%;
+  display:inline-block;
+  background-color: rgb(0, 0, 0);
+}
 
 
 
 #caption{
 position: absolute;
-width: 60%;
+width: auto;
 padding: 5%;;
 top: 30%;
 left:2%;
 
 }
 
+#caption h1{
+font-size: 4rem;
+}
+
+#caption p{
+  font-size: 2rem;
+}
 
 
 
@@ -146,17 +129,8 @@ left:2%;
   height: auto;
   vertical-align:top;
 }
-.horizontal-spacer{
-width:100%;
-height: 50px;
 
-}
-.vertical-spacer{
-  width: 2%;
-  height: auto;
-    vertical-align:top;
-  display: inline-block;
-}
+
 
 .description {
   width: 50%;
@@ -242,54 +216,59 @@ color: black;
 }
 
 
-.counter {
-width: 100%;
-margin-top: 50px;
-margin-bottom: 2%;
-display: flex;
-flex-direction: row;
+
+
+.playlist {
+  width: 100%;
 }
 
-.cont1{
+.playlist img, .playlist_text{
+    display: inline-block;
 
-width: 35%;
-height: auto;
-margin-right: 2%;
 }
 
-.cont2{
-width: 30%;
+
+.playlist_text{
+  vertical-align: top;
+width: 40%;
+margin-top: 0%;
+margin-bottom: 0%;
+
+}
+
+.playlist img{
+width: 40%;
 height:auto;
-}
-.cont2 img{
-width: 300px;
-height:auto;
+margin-right: 5%;
 }
 
-.cont2, .cont1{
-float: left;
-}
+
 
 
 
 
 .art-cont{
 width: 100%;
-margin-top: 2%;
-margin-bottom: 5%;
-margin-right: 2%;
 display: flex;
-flex-direction: row;
+flex-wrap: wrap;
+
+
+vertical-align: top;
+/* margin-top: 2%; */
+/* margin-bottom: 5%; */
+margin-right: 2%;
+
 
 }
 .art-cont img{
-width: 47%;
-height: 500px;
+width: 100%;
+height: auto;
 margin-right:2%;
 }
 
 .art-cont p{
 width: 50%;
+margin-bottom: 2%;
 }
 
 
