--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -1,79 +1,31 @@
-@media(min-width: 700px) and (max-width: 999px){
-
-h1{
-  font-size: 3.5rem;
-}
-
-p{
-  font-size: 1rem;
-}
-
-
-
-a{
-  font-size:0.8rem;
-}
-
-h2{
-  font-size: 30px;
-  
-}
-h3{
-    font-size: 3rem;
-
-}
-h4{
-   font-size: 2rem;
-}
+@media(min-width: 480px) and (max-width: 800px){
 
 #caption{
-top: 20%;
-left:5%;
+width: 80%;
+top: 11%;
+left: 5%;
 }
 
 
+#caption h1{
+font-size: 3rem;
+}
 
 
 }
 
-
-
-@media(min-width: 500px) and (max-width: 700px){
-
-h1{
-  font-size: 3rem;
-}
-
-p{
-  font-size: 1rem;
-}
-
-
-
-a{
-  font-size:0.8rem;
-}
-
-h2{
-  font-size: 30px;
-  
-}
-h3{
-    font-size: 1.5rem;
-
-}
-h4{
-   font-size: 1rem;
-}
+@media(min-width: 801px) and (max-width: 999px){
 
 #caption{
-top: 20%;
-left:5%;
+width: auto;
+top: 30%;
+left: 5%;
 }
 
 
-
-
+#caption h1{
+font-size: 3rem;
+}
 
 
 }
